--- a/styles.css
+++ b/styles.css
@@ -148,10 +148,14 @@ h1 {
 }
 
 .testimonial-author img {
+  width: 40px;
+  height: 40px;
   border-radius: 50%;
-  width: 50px;
-  height: 50px;
   margin-right: 1rem;
+  filter: invert(1);
+  opacity: 0.9;
+  background: rgba(255, 255, 255, 0.1);
+  padding: 5px;
 }
 
 .testimonial-author div div {
